adicionado arvore dom

--- a/arvore_dom.html
+++ b/arvore_dom.html
@@ -3,14 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>pagina inicial</title>
+    <title>Arvore dom</title>
 </head>
 <body>
-    <div>
-    <a href="formulario.html">ir para formulário</a>
-    </div>
-    <div>
-    <a href="arvore_dom.html">Árvore DOM</a>
-    </div>
+   <a href="index.html">voltar para a página inicial</a>
+   <a href="https://tableless.com.br/entendendo-o-dom-document-object-model/"><img src="img/DOM.jpg" /></a>
 </body>
 </html>
