--- a/formulario.html
+++ b/formulario.html
@@ -84,12 +84,13 @@
         </div>
 
         <br>
-        
+
         <div>
             <label for="end">Endereço:</label>
             <input type="text" id="end" />
         </div>
 
      </form> 
+     <a href="index.html">voltar para a página inicial</a>
 </body>
 </html>
