add tabela e css de tabela

--- a/arvore_dom.html
+++ b/arvore_dom.html
@@ -6,7 +6,12 @@
     <title>Arvore dom</title>
 </head>
 <body>
-   <a href="index.html">voltar para a página inicial</a>
-   <a href="https://tableless.com.br/entendendo-o-dom-document-object-model/"><img src="img/DOM.jpg" /></a>
+    <div>
+        <a href="index.html">voltar para a página inicial</a>
+    </div>
+    <br>
+    <div> 
+        <a href="https://tableless.com.br/entendendo-o-dom-document-object-model/"><img src="img/DOM.jpg" /></a>
+    </div>
 </body>
 </html>
