--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <div>
     <a href="arvore_dom.html">Árvore DOM</a>
     </div>
+    <div>
+        <a href="tabela.html">Tabela</a>
+    </div>
 </body>
 </html>
